k8s/apps/rabbitmq/cluster.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: rabbitmq
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rabbitmq.home-server.antoine-campbell.com
      http:
        paths:
          - backend:
              service:
                name: main-rabbitmq
                port:
                  name: management
            pathType: ImplementationSpecific
            path: /
